fixed bug that caused the calculated input widths to be too wide

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -151,6 +151,7 @@ body {
             display: inline;
 
             input {
+              max-width: 85% !important;
               min-width: 175px;
             }
           }
